Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <li><a href="http://mina.apache.org/">Apache MINA</a></li>
 <li><a href="https://github.com/Netflix/RxJava/">RxJava</a></li>
 </ul><h2>
-<a name="release-21-rc1-25-05-14-initial-release-experimental" class="anchor" href="#release-21-rc1-25-05-14-initial-release-experimental"><span class="octicon octicon-link"></span></a>Release 2.1-RC1, 25-05-14 (Initial Release, Experimental)</h2>
+<a name="release-21-rc2-06-06-14-bugfix-experimental" class="anchor" href="#release-21-rc2-06-06-14-bugfix-experimental"><span class="octicon octicon-link"></span></a>Release 2.1-RC2, 06-06-14 (Bugfix, Experimental)</h2>
 
 <p>The OpenBCI implementation requires a properties file named 'esp.openbci.properties' to be completed and available on the root of the classpath. An example
 file can be found <a href="https://github.com/mrstampy/ESP-OpenBCI/blob/master/ESP-OpenBCI/config/esp.openbci.properties">in the repository</a>.</p>
@@ -202,7 +202,7 @@ of custom lab implementation. </p>
 <pre><code>   &lt;dependency&gt;
        &lt;groupId&gt;com.github.mrstampy&lt;/groupId&gt;
        &lt;artifactId&gt;esp-openbci&lt;/artifactId&gt;
-       &lt;version&gt;2.1-RC1&lt;/version&gt;
+       &lt;version&gt;2.1-RC2&lt;/version&gt;
    &lt;/dependency&gt;
 </code></pre>
 
